# tailchatter

./: .gitignore  README.md
.github/workflows/: tailchatter-windows.yml
tailchatter-egui/: Cargo.toml
tailchatter-egui/src/: main.rs  protocol.rs  server.rs
tailchatter-egui/src/client/: mod.rs  state.rs
tailchatter-egui/src/client/ui/: chat.rs  login.rs  mod.rs  theme.rs
tailchatter-egui/src/server/: handler.rs  mod.rs  state.rs
