[package]
name = "tailchatter"
version = "0.1.0"
description = "A desktop chat application using TailScale network"
authors = ["you"]
edition = "2021"

[dependencies]
eframe = "0.28"
egui = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1